--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             <p>Served as a resource  to 43 students as a live-in advisor and mentor in the residence hall. Collaborated and communicated with a hall staff of 18 members to establish a united leadership team. Implemented the department's new Residential Curriculum (CATS Engagement) by facilitating intentional connections with residents, planning signature hall programs, and connecting with at-risk students on my floor.</p>
                             <p>Acted as a point person for over 400 students and parents during the opening and closing of the residence hall. Completed regular training on various intervention techniques and resources across campus, including QPR suicide intervention, Bias incident response, Community of Concern, fire safety, and safe zone training (LGBTQ*).</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2020 - May 2022</span></div>
                     </div>
                 </div>
             </section>
@@ -129,13 +129,13 @@
                             <h2 class="mb-5 yellow-text">WHAT CAN I DO?</h2>
                             <div class="subheading mb-3">Programming Languages & Tools</div>
                             <ul class="list-inline dev-icons">
+                                <li class="list-inline-item"><img src="./assets/img/icons8-c++-50.png"style="padding-bottom: 0.55rem;"></li>
+                                <li class="list-inline-item"><i class="fa-brands fa-python"></i></li>
                                 <li class="list-inline-item"><i class="fa-brands fa-html5"></i></li>
                                 <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                                 <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
                                 <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                                <li class="list-inline-item"><i class="fa-brands fa-python"></i></li>
                                 <li class="list-inline-item"><i class="fa-brands fa-bootstrap"></i> </i></li>
-                                
                                 <li class="list-inline-item"><i class="fa-brands fa-git-alt"></i></li>
                                 <li class="list-inline-item"><i class="fa-brands fa-github"></i></li>
                                 <li class="list-inline-item"><i class="fa-brands fa-ubuntu"></i></li>
