--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <p class="lead mb-5">I am an undergraduate student majoring in computer science and mathematics. I like solving algorithmic problems and coming up with unique solutions to complex problems. From making and mainting websites for several clients, to developing workflows for Point Cloud registration and manipulation, I have applied my knowledge in different fields on different topics. I am privileged to have worked with many diverse teams expereincing different perspectives. I am intereseted in applying my quantitative skills towards solving many of the social crises we face today.</p>
                     <div class="social-icons">
                         <a class="my-social-icons" href="https://www.linkedin.com/in/jdhruva/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="my-social-icons" href="https://github.com/Jadx03"><i class="fab fa-github"></i></a>
+                        <a class="my-social-icons" href="https://github.com/jdhruva03"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
